--- a/consul/molecule/default/playbook.yml
+++ b/consul/molecule/default/playbook.yml
@@ -1,9 +1,9 @@
 ---
 
 - name: Converge Servers
-  hosts: mlc-consul-server
+  hosts: mlc-server
   roles:
-  - role: nomad
+  - role: consul
   vars:
     server_enabled: true
     client_enabled: false
@@ -12,13 +12,13 @@
     telemetry_prometheus_enabled: false
 
 - name: Converge Clients
-  hosts: mlc-consul-client
+  hosts: mlc-client
   roles:
-  - role: nomad
+  - role: consul
   vars:
     server_enabled: false
     client_enabled: true
     consul_enabled: false
     vault_enabled: false
-    server_bootstrap_address: ["{{ hostvars['mlc-consul-server']['ansible_default_ipv4']['address'] }}"]
+    server_bootstrap_address: ["{{ hostvars['mlc-server']['ansible_default_ipv4']['address'] }}"]
     telemetry_prometheus_enabled: false
