--- a/consul/molecule/default/molecule.yml
+++ b/consul/molecule/default/molecule.yml
@@ -8,7 +8,7 @@ driver:
 lint:
   name: yamllint
 
-template: &nomad-agent
+template: &agent
   environment:
     container: docker
   image: ${JOB_DOCKER_IMAGE:-'centos:7'}
@@ -22,11 +22,11 @@ template: &nomad-agent
   tty: true
 
 platforms:
-- name: mlc-nomad-server
-  <<: *nomad-agent
+- name: mlc-server
+  <<: *agent
 
-- name: mlc-nomad-client
-  <<: *nomad-agent
+- name: mlc-client
+  <<: *agent
 
 provisioner:
   name: ansible
