--- a/consul/tasks/configure.yml
+++ b/consul/tasks/configure.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: template out environment settings
+- name: configure | environment settings
   become: true
   notify:
   - reload_daemon
@@ -13,7 +13,7 @@
   loop:
   - environment.sh
 
-- name: template out configurations
+- name: configure |  application settings
   become: true
   notify:
   - reload_daemon
@@ -25,9 +25,8 @@
     mode: 0644
   loop:
   - settings.hcl
-  - plugins.hcl
 
-- name: template unit definition
+- name: configure | unit definition
   become: true
   notify:
   - reload_daemon
