--- a/consul/handlers/main.yml
+++ b/consul/handlers/main.yml
@@ -10,3 +10,9 @@
   systemd:
     name: "{{ application }}"
     state: restarted
+
+- name: restart_dnsmasq
+  become: true
+  systemd:
+    name: dnsmasq
+    state: restarted
