--- a/consul/handlers/main.yml
+++ b/consul/handlers/main.yml
@@ -16,3 +16,9 @@
   systemd:
     name: dnsmasq
     state: restarted
+
+- name: restart_firewalld
+  become: true
+  systemd:
+    name: firewalld
+    state: restarted
