--- a/consul/tasks/99-post_tasks.yml
+++ b/consul/tasks/99-post_tasks.yml
@@ -1,4 +1,32 @@
 ---
+  # Configure firewall
+- name: configure firewall settings
+  become: true
+  notify:
+  - reload_daemon
+  - restart_firewalld
+  firewalld:
+    service: {{ application }}
+    permanent: yes
+    state: enabled
+    port: "{{ item }}"
+  loop:
+    - 8300/tcp
+    - 8301/tcp
+    - 8302/tcp
+    - 8500/tcp
+    - 8501/tcp
+    - 8502/tcp
+    - 21000-21255/tcp
+    - 8600/tcp
+    - 8301/udp
+    - 8302/udp
+    - 8600/udp
+    - 21000-21255/udp
+
+- name: disable SELinux (Required?)
+  selinux:
+    state: disabled
 
   # Run any handlers
 - name: flush handlers
