--- a/consul/molecule/default/playbook.yml
+++ b/consul/molecule/default/playbook.yml
@@ -1,20 +1,12 @@
 ---
 
-- name: Converge Servers
-  hosts: mlc-server
-  roles:
-  - role: consul
+- name: Converge
+  hosts: standalone
+
   vars:
     server_enabled: true
-    client_enabled: false
-    dnsmasq_enabled: true
-
-- name: Converge Clients
-  hosts: mlc-client
-  roles:
-  - role: consul
-  vars:
-    server_enabled: false
     client_enabled: true
     dnsmasq_enabled: true
-    server_bootstrap_address: ["{{ hostvars['mlc-server']['ansible_default_ipv4']['address'] }}"]
+
+  roles:
+  - role: consul
