--- a/consul/molecule/default/molecule.yml
+++ b/consul/molecule/default/molecule.yml
@@ -1,37 +1,61 @@
 ---
-dependency:
-  name: galaxy
+scenario:
+  name: default
+  test_sequence:
+    - lint
+    - destroy
+    #- dependency
+    - syntax
+    - create
+    #- prepare
+    - converge
+    - idempotence
+    #- side_effects
+    - verify
+    - destroy
 
-driver:
-  name: docker
+# ------------------------------------------------------------------------------
 
 lint:
   name: yamllint
 
+# ------------------------------------------------------------------------------
+
+dependency:
+  name: galaxy
+
+# ------------------------------------------------------------------------------
+
+driver:
+  name: docker
+
 template: &agent
+  image: ${TEST_IMAGE:-'centos:7'}
+  command: "${TEST_IMAGE_CMD:-'/usr/sbin/init'}"
   environment:
     container: docker
-  image: ${JOB_DOCKER_IMAGE:-'centos:8'}
   privileged: true
   volumes:
-  - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
+    - "/sys/fs/cgroup:/sys/fs/cgroup:rw"
   tmpfs:
-  - /tmp
-  - /run
-  command: "${JOB_DOCKER_COMMAND:-'/usr/sbin/init'}"
+    - /tmp
+    - /run
   tty: true
 
 platforms:
-- name: mlc-server
+- name: mlc-instance-1
+  groups:
+    - standalone
   <<: *agent
 
-- name: mlc-client
-  <<: *agent
+# ------------------------------------------------------------------------------
 
 provisioner:
   name: ansible
   lint:
     name: ansible-lint
+
+# ------------------------------------------------------------------------------
 
 verifier:
   name: testinfra
