--- a/consul/meta/main.yml
+++ b/consul/meta/main.yml
@@ -1,20 +1,21 @@
 ---
 galaxy_info:
 
-  role_name: nomad
+  role_name: consul
   author: Rune Rønneseth
-  description: HashiCorp Nomad installation (v0.10+)
+  description: HashiCorp Consul installation
   company: Kreditorforeninges Driftssentral DA
 
   license: GPLv3
 
   galaxy_tags:
     - hashicorp
-    - nomad
-    - scheduler
-    - orchestrator
+    - consul
+    - service
+    - connect
+    - dns
 
-  min_ansible_version: 2.3
+  min_ansible_version: 2.6
 
   platforms:
     - name: CentOS
